[package]
name = "server-tester"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.6", features = ["derive"] }
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
